・条件分岐 ・設計と実装

--- a/GoodCode,BadCode/16.設計を妨げる開発プロセスとの戦い.md
+++ b/GoodCode,BadCode/16.設計を妨げる開発プロセスとの戦い.md
@@ -71,10 +71,272 @@
 
 ## 16.2 設計
 
+設計は極めて重要な開発プロセスであるが、設計が行われない、設計がうまく働かない等、様々な問題があると思われる。  
+ここではその対処の仕方を説明する。  
+
+---
+
+### 16.2.1 「早く終わらせたい」心理が品質低下の罠
+
+品質がよくないシステムを作るチームでは、そもそもクラス設計の習慣がない。  
+仕事が忙しいと、実装を早く終わらせたい気持ちが先走り、動くコードをとにかく早く実装しがちになる。  
+納期の厳しい受託開発では顕著だろう。  
+そのため、クラス図すらろくに書かないなど、設計品質が無視されがちとなる。  
+著者の観測の範囲に過ぎないが、こういった事例は本当に多く、懸念を覚える。  
+
+設計品質度外視で、動くコードをとにかく早く書けるプログラマーが一部にはいる。  
+コードが劣悪でも、動いている画面を見ると、非エンジニアを含む現場は喜んでしまう。  
+口々に「もう実装できたんですか、流石ですね！」ともてはやす。  
+褒められたプログラマーはうれしいし、早く書けることがある種正義のような雰囲気が醸成されていく。  
+しかし、それが罠なのだ。  
+
+ほとんどのソフトウェアは1回作って終わりではない。  
+その後、仕様変更が繰り返され、機能はどんどん拡張されていく。  
+
+品質を無視した実装の繰り返しにより、粗悪なコードはどんどん蓄積されていく。  
+粗悪なコードは後から牙をむくようになる。  
+複雑で読み解くのに時間がかかり、些細なコード修正でバグが発生するなど、開発生産性は低下の一途をたどっていく。  
+
+設計品質度外視で動くコードを早く書けるプログラマーは、序盤では早く実装できる。  
+しかし、後になるほど実装速度が遅くなっていく。  
+粗悪な実装により、修正の影響が様々な箇所に伝播してしまうためである。  
+彼らは「完成しました」と報告はしても、その後の度重なるバグの修正に忙殺される。  
+バグだらけのコードを書いて完成したといえるのだろうか。  
+
+---
+
+## 16.2.2 粗悪なコードはきれいなコードを書くより常に遅い
+
+書籍「Clean Architecture」には、コードに関する驚くべき実験結果が記載されている。  
+テスト駆動開発(TDD)を用いての実装と、用いない実装のどちらが早く完成するかの比較実験である。  
+
+TDDでは、プロダクションコード以外にテストコードを実装しなければならないため、一見テストコードを書かないほうが早く完成しそうな感じがする。  
+
+ところがこの実験では、TDDのほうが全体的に早いという結果になったのだ。  
+この実験結果からも、「動くコードをとにかく早く書けるのが正義」といった考えに、著者は疑問を覚える。  
+
+※テスト駆動開発(TDD,Test Driven Development)とは、開発手法の1つ。  
+プログラムの機能要件をテストコードとして最初に書き、次にテストをパスするようにプロダクションコードを実装し、さらにコードの洗練を繰り返していく手法。  
+
+---
+
+### 16.2.3 クラス設計と実装のフィードバックサイクルを回す
+
+仕様変更の際、最低でもメモ書き程度のクラス図を書こう。  
+
+責務や凝集性などの観点から課題がないかどうかを、チームでざっくりレビューするのだ。  
+問題がなさそうであれば実装に取り掛かる。  
+
+実装してみて改めてわかることや見落としが発見されるケースが多分にあるので、クラス図にフィードバックする。  
+
+設計と実装のフィードバックサイクルを回すことで、設計品質が高まっていく。  
+
+---
+
+### 16.2.4 厳密に設計しすぎず、サイクルを回し続けるのがコツ
+
+大がかりな仕様変更では、それなりにしっかりしたクラス設計が必要となる。  
+一方で厳密に設計しすぎるのはお勧めしない。  
+どんなに設計しても、動作に必要な要素の見落としを、実装してみて初めて気が付くケースが多いためである。  
+
+初手で厳格に設計しすぎると、実装と乖離が生じたときの精神ダメージが大きくなる。  
+「いくら厳密に設計しても、実際の実装とは違う。こんな大変な思いをして設計しても、役にたたない」と、設計に価値を感じなくなり、設計をしなくなる場合すらある。  
+
+**たった一度の設計では、良き構造は見いだせない。**
+設計と実装のフィードバックサイクルを回し続けることで理解が深まっていき、徐々に設計品質が向上していくものだ。  
+
+「設計と実装が違う」「この設計でいくときめたじゃないですか、話が違う」ともめる原因にもなりかねないので、このサイクルの考え方はチームでしっかり合意することをお勧めする。  
+
+---
+
+### 16.2.5 「パフォーマンスが落ちるからクラスを追加しない」は正しい？
+
+「クラスのインスタンス生成はコストがかかる。パフォーマンスが落ちるから、クラスを増やしたくない」と考える方が一定数いる。  
+生成コストがかかるのは確かであるが、そのコストは多くのケースで無視できるものである。  
+
+近年はハード、ソフトともに性能の向上が続き、相対的にクラス生成コストはますます低下していく。  
+それでもパフォーマンスが気になるなら、まずは実際にパフォーマンスに影響が出ているか計測すべし。  
+計測すると、多くの場合、クラス生成が与える影響はまったく、またはほとんどないことが分かるはずである。  
+
+この問題はクラス生成に限らない。  
+パフォーマンスに対して支配的な部分、いわゆるボトルネックは、計測するまでわからないのだ。  
+ボトルネックが分からないうちから高速に動作するコードをやみくもに書くことは、**早すぎる最適化**と呼ばれるアンチパターンとなる。  
+
+パフォーマンスに影響のない箇所で高速化を目指したコードを書き、変更容易性を犠牲にするのは問題である。  
+
+---
+
+### 16.2.6 設計ルールを多数決で決めるとコード品質は最低になる
+
+コードの品質を向上させるため、コーディングルールや設計ルールをつくるケースがあるだろう。  
+ここで、もしかするとチーム全体の合意形成を目的に、ルールを多数決で決定する方法を採ろうとするかもしれない。  
+
+しかし、設計ルールの策定において、多数決は不幸な結果になりがちになる。  
+多数決や全会一致でコードや設計について決めようとすると、どうしてもレベルの低いほうに合わせて基準をまとめようとするためだ。  
+
+提案されたルールの良し悪しを、設計スキルが未熟なメンバーは判断できない。  
+そのような未熟なメンバーが多数を占めているチームでルールを多数決で決めようとすると何が起こるだろうか。  
+
+ルールの意図がっ十分に理解されないまま、無用な反発が生まれる。  
+「自分のコーディングの仕方と会わない」「いちいちこんなことしていられない」「面倒だ」「よくわからない」などの様々な反対意見が生じ、ルールの採用が難しくなっていく。  
+
+改善提案は通りにくくなり、粗悪なルールが採用されたり、ルールそのものが策定されなくなったりする。  
+
+---
+
+### 16.2.7 設計ルールづくりのポイント
+
+メンバー間の能力差が大きい場合は、多数決でなく、シニアエンジニアなど設計スキルの高いメンバーが中心となってルールを作るべし。  
+そしてチームリーダーの権限で、ルールの遵守を推進していくべし。  
+
+設計ルールそれぞれには、理由や意図を必ず併記すべし。  
+形骸化を防ぎ、より洗練されるようにするためである。  
+
+表16.1 設計ルールの例  
+|ルール|理由、意図|
+|:-|:-|
+|ネストは3以下とすること。</br>ネストが深くなりそうな場合、早期リターンへの書き換えを検討する事。|可読性を向上させるため。|
+|同じ条件分岐が複数実装されそうな場合、インターフェース設計を検討する事|修正漏れの可能性が高くなるため。|
+|クラスやメソッドの名前は特定の目的を表現していること。|目的がよくわからないとロジックが混乱し、保守や変更が大変になるため。|
+
+これらを踏まえて、次のことを伝えるべし。  
+
+- 設計ルールは、パフォーマンスやフレームワークの制約など、様々な要件とトレードオフになる可能性がある。  
+- 何が何でもルール絶対遵守ではなく、落とし所、妥協点の模索が必要な状況がある。  
+
+チームの設計スキルが成熟していないうちは、自助努力に任せず、設計に詳しいメンバーが設計品質をコントロールできるようにする。  
+詳しいメンバーを設計レビューやコードレビューにアサインしよう。  
+
+レビューだけではスキルアップが不十分な場合もある。  
+フォローアップ勉強会も適宜開催し、チームの設計スキルアップを目指そう。  
+
+設計ルールの意図が一度で伝わるのは稀である。  
+レビューや勉強会を繰り返して、何度も伝え続けることで少しずつ理解が進んでいく。  
+
+チームの設計スキルが成熟して来たら、そこで改めて設計ルールについて議論するのがいいだろう。  
+
 ---
 ---
 
 ## 16.3 実装
+
+コードへの向き合い方、考え方が変わると、実装の取り組み方が違ってくる。  
+
+---
+
+### 16.3.1 割れ窓理論とボーイスカウトの規則
+
+犯罪学に**割れ窓理論**という理論がある。  
+以下の経過をたどって治安が悪化していくとする説である。  
+
+1. 建物に割れた窓が1枚ある。  
+2. 割れた窓が長く放置されていると、誰も気にかけていない象徴になる。  
+3. ほかの窓が割られる、ごみを捨てられるなど軽犯罪が起こり、次第に治安が悪化する。  
+4. さらにエスカレートし、凶悪犯罪が起こるようになる。  
+
+ソフトウェア開発でも同じことが言える。  
+粗悪で、複雑で秩序のないコードが放置されていると、ソフトウェア全体が無秩序になってしまう。  
+「ほかのコードも雑な作りなんだから、自分のも多少は雑でいいだろう」という心のスキが生じる。  
+自分が1回に追加・変更するコードは大した量ではないかもしれない。  
+しかし、積み重なっていくと、取り返しが困難なレベルにまでソフトウェア全体のコードを腐敗させてしまう。  
+
+アメリカの**ボーイスカウトの規則**には「キャンプ場を、自分が来た時よりもきれいにすること」がある。  
+これをプログラミングにも当てはめて考えることができる。  
+コードを変更する時、自分が変更する前よりもきれいな状態にしてコミットするのである。  
+小さな積み重ねではあるが、小さな改善が繰り返されることによって少しずつ秩序が回復していくはずである。  
+
+あるべき構造を本書で学んだ後は、どんな構造が悪魔を呼び寄せるのか、すでに「目を持っている」状態なはずである。  
+悪しき構造が光って見えるはずである。  
+少しずつでよいので、気が付いた箇所を改善するクセを付けていこう。  
+
+---
+
+### 16.3.2 既存コードを信用せず、冷静に正体を見破る
+
+粗悪なコードを疑いもなく真似てしまうことが多々ある。  
+新入社員や後任者は、先輩社員や前任者が書いたコードがレガシーコードだと気づかず、むしろ「これが先輩のお手本だ」「前任者の流儀だ」と思い違いをしてしまい、レガシーコードと同じ書き方でさらにレガシーコードを量産してしまうことになる。  
+技術力が未熟な新入社員はこの傾向が顕著である。  
+
+レガシーコードを撲滅するには、既存コードを一切信用しないぐらいの心構えが重要である。  
+構造的に怪しいもの、クラス名やメソッド名が怪しいものなど、さまざまである。  
+名前一つとっても、仕様と異なる、意味が異なる名前が付与されているものもある。  
+
+「これは何を解決したいコードなのか」「達成したい目的はなんなのか」を分析し、あるべき設計をゼロベースでくみ上げる必要がある。  
+筆者はこれを**正体を見破る**と呼んでいる。  
+しかし、正体を見破るにあたり、いくつか乗り越えるべきハードルがある。  s
+
+ハードルの1つは、**アンカリング効果**と呼ばれる心理作用である。  
+これは、最初に提示された数値や情報が基準になってしまい、その後の判断をゆがめてしまう認知バイアスのことである。  
+例えば、最初に提示された価格が高額だと、後から提示された価格が割安に感じられる。  
+最初の価格が損得の判断基準になってしまう。  
+これがアンカリング効果である。  
+アンカリング効果に振り回されないためには、そもそも最初に提示された価格が本当に妥当だったのかどうかを検証する必要がある。  
+
+アンカリング効果はソフトウェア開発でも発生する。  
+既存のクラス名やメソッド名が基準となってしまい、開発者の判断を歪ませ、混乱させてしまうケースがとても多い。  
+
+もう一つのハードルは、**ジョシュアツリーの法則**と呼ばれる法則である。  
+これは、名前を知って初めて存在を知覚できるようになる、逆に名前を知らないと存在を知覚できないとする認知法則である。  
+
+「生焼けオブジェクト」を知ったことで、どういったコードが生焼けオブジェクトなのか、読者の皆さんは知覚できるようになったはずである。  
+一方、「売買契約」という名前も概念も知らなければ、売買契約について回る支払い条件の存在を知ることは困難である。  
+
+知らなければ対処できないというハードルを乗り越えるには、詳しい人にインタビューしたり、文献を読んだりするなど、ソフトウェアで解決したい内容、達成したい目的について、詳しい知見やそこで使われている言葉を把握し、理解することが重要になる。  
+
+これら2つのハードルを乗り越えて冷静に正体を見破り、正体を正しく表現した名前をクラスに付与しよう。  
+
+---
+
+### 16.3.3 コーディング規約を利用しよう
+
+プログラミング言語は多様な書き方ができる。  
+例えばある変数名が`personName`でも`PERSONNAME`でも`person_name`でも、Javaではコンパイルが成功する。  
+また、インデントの深さや`{`の前で改行するかどうかも自由である。  
+
+しかし、これらに統一性がないと、コードが非常に読みづらくなる。  
+コードの読みやすさを高めるには、コーディング規約が欠かせない。  
+**コーディング規約**とは、コードの可読性、保守性向上や、問題のあるコードの未然防止を目的に、コーディングスタイルや命名規則などのルールを定めたものである。  
+
+コーディング規約を遵守することで、コードの構造や命名に秩序が生まれ、読みやすさがグッと上がる。  
+ほとんどのプログラミング言語には、企業や有志の団体により編纂されたコーディング規約があり、ネット上に公開されている。  
+
+コーディングスタイルをチェックする機能やツールは多数ある。  
+多くのIDEには、チェック機能が備わっている。  
+RoboCop(Ruby)やESLint(JavaScriptほか)など、ツールが個別に提供されていることもある。  
+これらを使わない手はない。  
+
+---
+
+### 16.3.4 命名規則
+
+コーディング規約はフォーマットやコメントの書き方など多岐にわたる。  
+そのうちの命名規則を開設する。  
+
+**命名規則**とは変数名やクラス名、メソッド名を決める際のルールである。  
+例えば、Javaのコーディング規約を定めた「Future Enterprise Coding Standard for Java」には次のようなルールがある。  
+
+表16.3 Java命名規約の例  
+|要素|ルール|例|
+|:-|:-|:-|
+|クラス|アッパーキャメルケース|Customer|
+|メソッド|ローワーキャメルケース|payMoney|
+|定数|すべて大文字、区切りは`_`|MAX_NAME_LENGTH
+
+アッパーキャメルケースとは単語の先頭を大文字にするルールで、ローワーキャメルケースとは区切りのみ大文字にするルールである。  
+他には、すべて小文字で単語の区切りを`_`で示すスネークケース(例:`pay_money`)などがある。  
+
+プログラミング言語ごとに命名規約は異なる。  
+例えば、インスタンス変数の命名に関してJava(Future Enterprice Coding Standards for Java)とRuby(RuboCop Style Guide)では以下の違いがある。  
+
+表16.4 言語ごとの命名規則の違い
+|言語|ルール|例|
+|:-|:-|:-|
+|Java|ローワーキャメルケース|totalPrice|
+|Ruby|スネークケース|total_price|
+
+同じ言語でも、採用するコーディング規約によって命名規則が異なるケースがある。  
+コーディング規約は既存のものをそのまま利用することもあれば、既存をベースに改良することもある。  
+いずれにしても、統一的なルールを定めて、チーム全体で可読性を高めていくことが大切となる。  
 
 ---
 ---
