--- a/GoodCode,BadCode/6.条件分岐.md
+++ b/GoodCode,BadCode/6.条件分岐.md
@@ -1,1 +1,1557 @@
 # 6. 条件分岐 迷宮化した分岐処理を解きほぐす技法
+
+分岐処理は、条件に応じて処理内容を切り替えるための、プログラミングの基本制御。  
+条件分岐のおかげで複雑な判断を高速かつ正確に実行でき、サービス利用者に恩恵をもたらしている。  
+
+一方で、条件分岐をずさんに扱うと、悪魔となって開発者を苦しめることになる。  
+条件が複雑になると見通しが悪くなり、理解が困難になる。  
+理解が困難だと、デバッグや仕様変更に時間がかかる。  
+分岐ロジックを正確に理解せずに仕様変更すれば、バグを生むことだろう。  
+
+---
+---
+
+## 6.1 条件分岐のネストによる可読性低下
+
+RPGにおける魔法発動を例に、条件分岐のネスト(入れ子構造)について説明する。  
+
+- RPGではプレイヤーが各メンバーに行動を指示する。  
+- その後、素早さなどから行動の順番が決まる。  
+- 順番が回ってきたメンバーが指示された行動をいていく。  
+
+こうした仕様があるために、魔法の指示を受けても必ず魔法を発動できるとは限らない。  
+順番が回ってくるまでに敵の攻撃を受けて戦闘不能に陥る、眠りや麻痺で動けなくなる場合がある。  
+
+したがって、実際に魔法発動するには、様々な条件をクリアしなければならない。  
+
+以下に、魔法発動までの条件を実装した例を挙げる。  
+
+``` java
+// リスト6.1
+// if文で多重にネストした構造
+
+// 生存しているか判定
+if (0 < member.hitPoint) {
+    // 行動可能か判定
+    if (member.canAct()) {
+        // 魔法力が残存しているか判定
+        if (magic.costMagicPoint <= member.magicPoint) {
+            member.consumeMagicPoint(magic.costMagicPoint);
+            member.chant(magic);
+        }
+    }
+}
+```
+
+- 生存していること  
+- 行動可能であること  
+- 魔法力が残存していること  
+
+これらすべての条件を満たすことで魔法発動可能なロジックとなっている。  
+いくつもの条件判定をするために、if文の中にif文が記述される構造となっている。  
+このような、入れ子構造を、**ネスト**と呼ぶ。  
+ネストしているとも呼ばれる。  
+
+ネストしていると何が問題なのか？  
+
+- コードの見通しが悪くなる  
+  - どこからどこまでがifの処理ブロックなのか、読み解くのが難しくなる。  
+  - ifの終わり(`}`)を探すのだけでも一苦労する。  
+  - 開発者の思考に非常に高い負荷がかかり、疲弊の原因となる。  
+- 開発生産性が低下する  
+  - コードの理解に膨大な時間を浪費することになり、チーム全体で開発生産性が低下する。  
+  - 1度や2度ではなく、コードを読む人すべてが理解に時間を浪費することとなる。  
+- 仕様変更が大変になる  
+  - ロジックの解読を慎重に行わなければバグとなってしまうため、柔軟な仕様変更ができなくなる。  
+
+``` java
+// リスト6.2
+// 巨大なネスト
+
+if (条件) {
+    //
+    // 数百行の処理
+    //
+    if (条件) {
+        //
+        // 数百行の処理
+        //
+        if (条件) {
+            //
+            // 数百行の処理
+            //
+            if (条件) {
+                //
+                // 数百行の処理
+                //
+            }
+        }
+        //
+        // 数百行の処理
+        //
+    }
+    //
+    // 数百行の処理
+    //
+}
+```
+
+---
+
+### 6.1.1 アーリーリターンでネスト解消
+
+解決策の1つに、早期リターンがある。  
+**早期リターン**とは、条件と満たしていない場合に、直ちにreturnで抜けてしまう、という手法。  
+
+早期リターンの形へ変更するには、元の条件を反転させる。  
+「生存している場合」から「生存していない場合」へ変更する。  
+
+他の条件にも早期リターンを適用する。  
+
+``` java
+// リスト6.1
+// if文で多重にネストした構造
+
+// 生存しているか判定
+if (0 < member.hitPoint) {
+    // 行動可能か判定
+    if (member.canAct()) {
+        // 魔法力が残存しているか判定
+        if (magic.costMagicPoint <= member.magicPoint) {
+            member.consumeMagicPoint(magic.costMagicPoint);
+            member.chant(magic);
+        }
+    }
+}
+
+
+// リスト6.4
+// 全てのネストを解消
+
+if (member.hitPoint <= 0) return
+if (!member.canAct()) return;
+if (member.magicPoint < magic.costMagicPoint) return;
+
+member.consumeMagicPoint(magic.costMagicPoint);
+member.chant(magic);
+```
+
+最初の例と比べるとネストが解消され、ロジックの見通しがよくなった。  
+
+早期リターンにはもう一つ利点がある。  
+
+- 条件ロジックと実行ロジックを分離できること。  
+
+魔法発動不能となる条件が冒頭の早期リターンにまとめられた。  
+それにより、魔法発動時に実行するロジックが分離され、条件と実行を分けて考えることが容易になった。  
+
+次の仕様が追加されたとする。  
+
+- メンバーはテクニカルポイント(TP)というパラメーターを持つ。  
+- 魔法発動には所定のクリティカルポイントを必要とする。  
+
+発動不能条件が書かれている箇所が早期リターンでまとめられているため、ロジックの追加が容易。  
+
+``` java
+// リスト6.5
+// 条件追加が容易
+
+if (member.hitPoint <= 0) return
+if (!member.canAct()) return;
+if (member.magicPoint < magic.costMagicPoint) return;
+// 新規追加
+if (member.technicalPoint < magic.costTechnicalPoint) return;
+
+member.consumeMagicPoint(magic.costMagicPoint);
+member.chant(magic);
+```
+
+実行ロジックに関する仕様変更でも同じことがいえる。  
+例えば、「魔法発動後にTPを一定数増加する」という仕様が追加された場合、魔法発動の実行ロジックが後半にまとまっているので、容易にロジックが追加できる。  
+
+``` java
+// リスト6.6
+// 実行ロジックの追加も用意
+
+if (member.hitPoint <= 0) return
+if (!member.canAct()) return;
+if (member.magicPoint < magic.costMagicPoint) return;
+if (member.technicalPoint < magic.costTechnicalPoint) return;
+
+member.consumeMagicPoint(magic.costMagicPoint);
+member.chant(magic);
+member.gainTechnicalPoint(magic.incrementTechnicalPoint);
+```
+
+早期リターンを用いて、冒頭で不要な条件を弾く方法は、**ガード節**の考え方が元になっている。  
+このように、ロジックを素早く理解するには、ロジックの見通しの良さが重要となる。  
+
+---
+
+### 6.1.2 見通しを悪くするelse句も早期リターンで解決
+
+else句も見通しを悪化させる要因の一つ。  
+
+多くのゲームには、メンバーのヒットポイントが低下してきたときに、危険であることを知らせる表示仕様が盛り込まれている。  
+こういった仕様を満たすために、ヒットポイントの割合に応じて生命状態HealthConditionを返すロジックを例に考える。  
+割合毎の状態は以下の仕様とする。  
+
+|ヒットポイント割合|生命状態|
+|:-|:-|
+|0%|死亡|
+|30%|危険|
+|50未満|注意|
+|50以上|良好|
+
+余り設計を考えずに実装した場合、以下のようになるのではなかろうか。  
+
+``` java
+// リスト6.7
+// 多くのelse句でやや見通しの悪いロジック
+
+float hitPointRate = member.hitPoint / member.maxHitPoint;
+
+HealthCondition = currentHealthCondition;
+if (hitPointRate == 0) {
+    currentHealthCondtion = HealthCondition.dead;
+} else if (hitPointRate < 0.3) {
+    currentHealthCondtion = HealthCondition.danger;
+} else if (hitPointRate < 0.5) {
+    currentHealthCondtion = HealthCondition.caution;
+} else {
+    currentHealthCondtion = HealthCondition.fine;
+}
+
+return currentHealthCondtion;
+```
+
+まだ分からんでもないが、すでに危険。  
+でもって、ifの中でさらにネストするともうダメ。  
+この場合も早期リターンで解決できるので、早期リターンで置き換える。  
+
+``` java
+// リスト6.8
+// else句を早期リターンに置き換え
+
+float hitPointRate = member.hitPoint / member.maxHitPoint;
+
+if (hitPointRate == 0) {
+    return HealthCondition.dead;
+} else if (hitPointRate < 0.3) {
+    return HealthCondition.danger;
+} else if (hitPointRate < 0.5) {
+    return HealthCondition.caution;
+} else {
+   return HealthCondition.fine;
+}
+```
+
+最初よりはマシになったが、もっと踏み込める。  
+
+``` java
+// リスト6.9
+// else句がすべて消えて見通しの悪さが解消
+
+float hitPointRate = member.hitPoint / member.maxHitPoint;
+
+if (hitPointRate == 0) return HealthCondition.dead;
+if (hitPointRate < 0.3) return HealthCondition.danger;
+if (hitPointRate < 0.5) return HealthCondition.caution;
+
+return HealthCondition.fine;
+```
+
+見通しがよくなっただけではなく、仕様をそのまま表現した形にもなった。  
+
+---
+---
+
+## 6.2 Switch文の重複
+
+何らかの種類ごとに処理を切り替えたい場合、switch文が使われることがほとんど。  
+しかし、switch文は悪魔を非常に呼び寄せやすい制御構文となっている。  
+対処法を知らないと、バグを埋め込んだり、可読性を低下させたりしてしまう。  
+
+「とあるゲーム会社で新たにPRGを開発することになった」という架空の状況を想定する。  
+戦闘システムの開発には複数のチームが存在する。  
+その内の1チームで攻撃魔法の実装を担当することになった。  
+
+基本仕様は以下の通りとする。  
+
+表6.2 魔法の基本仕様
+|項目|説明|
+|:-|:-|
+|名前|魔法の名前。表示に用いる|
+|消費魔法力|魔法使用時に消費する魔法力|
+|攻撃力|魔法の攻撃力。それぞれ計算式が異なる|
+
+開発初期に以下の魔法が考えられたとする  
+
+表6.3 魔法一覧  
+
+|魔法|説明|
+|:-|:-|
+|ファイア|炎の魔法。使用者のレベルが高いほど攻撃力増大。|
+|紫電|雷の魔法。使用者の素早さが高いほど攻撃力増大。|
+
+---
+
+### 6.2.1 即座にswitch文を書いてしまう
+
+それぞれ効果の異なる魔法をいくつも実装する場合、どのようなロジックになるか。  
+種類ごとに処理を切り分けるロジックを実装する場合、switch文が使われることが多いと思われる。  
+
+まず魔法の種類をenumのMagicTypeと定義した。  
+
+``` java
+// リスト6.10
+// 魔法の種類を定義したenum
+
+enum MagicType {
+    fire,  // ファイア。炎の魔法。
+    shiden // 紫電。雷の魔法。
+}
+```
+
+まず、魔法の名前を取得するgetNameメソッドを実装する。  
+switch文を使って、MagicTypeごとに対応する名前をcaseで切り替えている。  
+
+``` java
+// リスト6.11
+// swtich文で表示名を切り替え
+
+class MagicManager {
+    String getName(MagicType magicType) {
+        String name = "";
+
+        switch (magicType) {
+            case fire:
+                name = "ファイア";
+                break;
+            case shiden:
+                name = "紫電";
+                break;
+        }
+
+        return name;
+    }
+}
+```
+
+---
+
+### 6.2.2 同じ条件式のswitch文が複数書かれていく
+
+魔法の種類による切り替えは名前だけではない。  
+消費魔法力や攻撃力もある。  
+消費魔法力を取得するメソッドを`costMagicPointメソッド`とし、攻撃力を取得するメソッドを`attackPowerメソッド`として実装する。  
+
+するとどうだろか。
+この時点で、MagicTypeで処理を切り替えるswitch文が3つも登場してしまった。  
+
+同じ条件式のswitch文が複数実装されているこの状況がいいはずがない。  
+このままこの状態が続いた場合、どのようなことが起こってしまうのか見ていく。  
+
+---
+
+### 6.2.3 仕様変更時の修正漏れ(case文追加漏れ)
+
+多忙な中、開発は進み、新たな魔法「地獄の業火」が追加されることになった。  
+担当者は、魔法の種類ごとにswitch文で処理を切り替えていたことを思い出した。  
+そして、魔法「地獄の業火」に対応するcase文を追加した。  
+
+`getNameメソッド`には追加した。  
+`costMagicPointメソッド`にも追加した。  
+・・・  
+
+軽く動作確認して仕様通りに実装されていそうだったので、リリースしてしまったとする。  
+するとどうだろうか。  
+リリース後しばらくして、「魔法『地獄の業火』のダメージが低すぎる」とユーザーから苦情が上がってくるようになってしまった。  
+原因を調べると、攻撃力を計算するメソッドattackPowerにcase文を追加し忘れていたことが判明した。  
+
+大変だぁ。  
+
+#### 仕様の追加
+
+しかし、問題はそれだけではなかったとする。  
+時を同じくして、開発現場では、新たな仕様が次々と追加されている状況だった。  
+新規仕様の一つにテクニカルポイントがあった。  
+テクニカルポイントは、魔法力と似たようなパラメーターとする。  
+魔法使用時に魔法力を消費するのと同様に、所定の特殊鋼同時にテクニカルポイントを消費する、といった仕様となる。  
+
+今回の仕様追加では、魔法にも消費テクニカルポイントが設定されることになったとする。  
+テクニカルポイントの実装は、魔法のチームとは別のチームが担当することになった。  
+
+担当者は、魔法の種類ごとにenum MagicTypeを条件にswitch文で処理を切り替えている実装を見つけた。  
+この実装をまねて、消費テクニカルポイントを返すメソッド`costTechnicalPoint`を実装した。  
+
+``` java
+// リスト6.17
+// 消費テクニカルポイントをswtich文で切り替え
+
+int costTechnicalPoint(MagicType magicType, Member member) {
+    int technicalPoint = 0;
+
+    switch (magitType) {
+        case fire:
+            technicalPoint = 0;
+            break;
+        case shiden:
+            technicalPoint = 5;
+            break;
+    }
+
+    return technicalPoint;
+}
+```
+
+担当者は問題なさそうと判断し、リリースしたとする。  
+ところが、「一部の魔法の消費テクニカルポイントが表示と違う」とユーザーから苦情が上がってきてしまった。  
+調べてみると、魔法「地獄の業火」の消費テクニカルポイントが実装されていなかった。  
+担当者は、追加された魔法について知らなかったのである。  
+
+---
+
+### 6.2.4 爆発的に増殖するswitch文の重複
+
+このゲーム開発の例では、魔法が3つだけだったので、注意深く対応していれば、case文の実装漏れを防げるかもしれない。  
+しかし、そんな低レベルな話をしているのではない。  
+
+この例と同じ方法で実装すると、魔法の種類だけcase文を書く必要があり、MagicTypeの分だけcaseを切る必要がある。  
+しかも、処理の切り替え対象も追加された分を含めて4つ程度であったが、実際にはもっと多くのケースが必要となる。  
+つまり、切り替え対象の分だけメソッドが増える。  
+でもって、増えたメソッドに同じswitch文を記述する必要がある。  
+おしまいです。  
+
+- 追加の仕様変更が発生した場合、莫大な数のswtich文の中から、仕様変更に関する箇所を探しださなければならなくなる  
+  - 可読性の低下が懸念される  
+- 修正漏れが発生する  
+- 注意深く実装する必要があり、開発者の負担が増し、開発生産性が低下する  
+
+この問題はゲームに限った話ではなく、どのようなソフトウェアでも種類ごとの切り替え処理は必要になる。  
+一体どうすればよいのだろうか。  
+
+---
+
+### 6.2.5 条件分岐を一箇所にまとめる
+
+switch文の重複コードを解消するには、**単一責任選択の原則**の考え方が重要となる。  
+この原則は「オブジェクト思考入門 第2版 原則・コンセプト」で次のように説明されている。  
+
+>ソフトウェアシステムが選択肢を提供しなければならない時、そのシステムの中の1つのモジュールだけがその選択肢のすべてを把握すべきである。  
+
+つまり、同じ条件式の条件分岐を複数書かず、一箇所にまとめよう、とする原則である。  
+単一責任選択の原則に基づき、MagicTypeのswitch文を一つにまとめる。  
+
+``` java
+// リスト 6.18
+// switch文を重複させず、1か所にまとめる
+
+class Magic {
+    final string name;
+    final int costMagicPoint;
+    final int attackPower;
+    final int costTechnicalPoint;
+
+    Magic(final MagicType magicType, final Member member) {
+        switch (magicType) {
+            case fire:
+                name = "ファイア";
+                costMagicPoint = 2;
+                attackPower = 20 + (int)(member.level * 0.5);
+                costTechnicalPoint = 0;
+                break;
+            case shigen:
+                name = "紫電";
+                costMagicPoint = 5 + (int)(member.level * 0.2);
+                attackPower = 50 + (int)(member.agility * 1.5);
+                costTechnicalPoint = 5;
+                break;
+            case hellFire:
+                name = "地獄の業火";
+                costMagicPoint = 16;
+                attackPower = 200 + (int)(member.magicAttach * 0.5 + member.vitality * 2);
+                costTechnicalPoint = 20 + (int)(member.level * 0.4);
+                break;
+            default:
+                throw new IllegalArgumentException();
+        }
+    }
+}
+```
+
+たった一つのswitch文で、名前、消費魔法力、攻撃力、消費テクニカルポイントをすべて切り替えている。  
+switch文があちこち複数個所に実装されず、一か所にまとまっているので、仕様変更時の抜け漏れを防止できる。  
+
+---
+
+### 6.2.6 よりスマートにswitch文重複を解消するinterface
+
+単一責任選択の原則に基づき、switch文は一か所にまとまったが、切り替えたいものが増えた場合、リスト 6.18のロジックはブクブクに膨れ上がる。  
+クラスが巨大になると、データやロジックの関係性が分かりにくくなっていき、保守や変更が難しいコードになってしまう。  
+従って、巨大化したクラスは関心事ごとの小さなクラスへ分割することが肝要となる。  
+この課題解決に役立つのが`interface`となる。  
+
+interfaceはJavaなどのオブジェクト指向言語特有の仕組みで、機能の切り替えや差し替えを容易にする。  
+**interfaceを使うと、分岐ロジックを書かずに分岐と同じことが実現可能となる。**  
+そのため、条件分岐が大幅に減り、ロジックがシンプルになる。  
+
+---
+
+### 6.2.7 interfaceをswitch文重複に応用(ストラテジーパターン)
+
+#### 種類ごとに切り替えたい機能をinterfaceのメソッドとして定義する  
+
+魔法それぞれで切り替えたい機能をメソッドとして定義する。  
+今回の仕様では以下の4点となる。  
+
+- 名前  
+- 消費魔法力  
+- 攻撃力  
+- 消費テクニカルポイント  
+
+#### インターフェースの名前を決める
+
+**「なんの仲間であるか」がインターフェース命名の決め手。**  
+考え方の一つに「インターフェースを実装したクラスがなんの仲間であるか」がある。  
+
+図形の例では、四角形や円は図形の仲間なので、Shapeと命名した。  
+「ファイア」「紫電」「地獄の業火」は何の仲間か？といえば、魔法の仲間なので、インターフェース名を`Magic`とする。  
+
+``` java
+// リスト6.28
+// 魔法型を表現するinterface
+
+interface Magic {
+    String name();
+    int costMagicPoint();
+    int attackPower();
+    int costTechnicalPoint();
+}
+```
+
+#### 種類をクラス化する
+
+図形であれば、四角形は`Rectangle`クラス、円は`Circle`クラスとして定義した。  
+その中で、それぞれで計算式が異なる面積を求めるメソッドを実装できる。  
+
+それと同様に魔法の種類をそれぞれクラス化する。  
+
+|魔法|クラス|
+|:-|:-|
+|ファイア|Fire|
+|紫電|Shiden|
+|地獄の業火|HellFire|
+
+#### 種類それぞれのクラスにインターフェースを実装する
+
+``` java
+// リスト6.29
+// 魔法「ファイア」を表現するクラス
+class Fire implements Magic {
+    private final Member member;
+
+    Fire (final Member member) {
+        this.member = member;
+    }
+
+    public String name() {
+        return "ファイア";
+    }
+
+    public int costMagicPoint() {
+        return 2;
+    }
+
+    public int attackPower() {
+        return 20 + (int)(member.level * 0.5);
+    }
+
+    public int costTechnicalPoint() {
+        return 0;
+    }
+}
+
+// リスト6.30
+// 魔法「紫電」を表現するクラス
+class Shiden implements Magic {
+    private final Member member;
+
+    Shiden (final Member member) {
+        this.member = member;
+    }
+
+    public String name() {
+        return "紫電";
+    }
+
+    public int costMagicPoint() {
+        return 5 + (int)(member.level * 0.2);
+    }
+
+    public int attackPower() {
+        return 50 + (int)(member.agility * 1.5);
+    }
+
+    public int costTechnicalPoint() {
+        return 5;
+    }
+}
+
+// リスト6.31
+// 魔法「地獄の業火」を表現するクラス
+class HellFire implements Magic {
+    private final Member member;
+
+    HellFire (final Member member) {
+        this.member = member;
+    }
+
+    public String name() {
+        return "地獄の業火";
+    }
+
+    public int costMagicPoint() {
+        return 16;
+    }
+
+    public int attackPower() {
+        return 200 + (int)(member.magicAttack * 0.5 + member.vitality * 2);
+    }
+
+    public int costTechnicalPoint() {
+        return 20 + (int)(member.level * 0.4);
+    }
+}
+```
+
+``` mermaid
+---
+title: 図6.3 Magic Interfaceで魔法関連の処理を抽象化
+---
+classDiagram
+    direction BT
+
+    class Magic { 
+        <<interface>>
+        name() String
+        costMagicPoint() int
+        attackPower() int
+        costTechnicalPoint() int
+    }
+
+    class Fire {
+        - member : Member
+        Fire(member : Member)
+    }
+    class Shiden{
+        - member : Member
+        Shiden(member : Member)
+    }
+    class HellFire{
+        - member : Member
+        HellFire(member : Member)
+    }
+
+    class Member {
+        level : int
+        agility : int
+        magicAttack : int
+        vitality : int
+    }
+
+    Fire ..|> Magic : 実装
+    Shiden ..|> Magic : 実装
+    HellFire ..|> Magic : 実装
+    Member <-- Fire : 関連
+    Member <-- Shiden : 関連
+    Member <-- HellFire : 関連
+```
+
+このように実装することで、Fire,Shiden,HellFireはすべて同じMagic型として利用できるようになる
+
+#### switchの代わりにMapで切り替える
+
+全てMagic型として扱えるようになったが、switch文に頼らずに切り替えるには、もうひと手間必要となる。  
+そのためには`Map`を使う。  
+Javaでは`Map`だが、つまるところ、キーバリューのリスト的なものであればなんでもよい。  
+
+enum MagicTypeをキーに、対応するMagicInterface実装クラスのインスタンスを取得するロジックにする。  
+
+``` java
+// リスト6.32
+// 処理切り替えをMapで実現
+
+final Map<MagicType,Magic> magics = new HashMap();
+// 中略
+final Fire fire = new Fire(member);
+final Shiden shiden = new Shiden(member);
+final HellFire hellFire = new FellFire(member);
+
+magics.put(MagicType.fire, fire);
+magics.put(MagicType.shiden, shiden);
+magics.put(MagicType.hellFire, hellFire);
+```
+
+例えば、ダメージ計算用に魔法攻撃力を参照するケースを考える。  
+次のようにMapからMagicTypeに対応するMagicInterface実装クラスのインスタンスを引く。  
+そのインスタンスのattackPowerを呼び出す。  
+
+``` java
+// リスト6.33
+// 魔法攻撃力の切り替え
+
+void magicAttack(final MagicType magicType) {
+    final Magic usingMagic = magics.get(magicType);
+    usingMagic.attackPower();
+}
+```
+
+magicAttackメソッドの引数にMagicType.hellFireが渡された場合、usingMagic.attackPower()ではHellFire.attackPower()がコールされることになる。  
+Mapがswitch文による場合分け処理の代わりを果たす。  
+
+名前、消費魔法力、攻撃力、消費テクニカルポイントの処理を、Mapを使ってすべて切り替える。  
+
+``` java
+// リスト6.34
+// Magic Interfaceによる魔法処理の全切り替え
+
+final Map<MagicType,Magic> magics = new HashMap<>();
+// 中略
+
+// 魔法攻撃を実行する
+void magicAttack(final MagicType magicType) {
+    final Magic usingMagic = magics.get(magictype);
+
+    showMagicName(usingMagic);
+    consumeMagicPoint(ugingMagic);
+    consumetechnicalPoint(usingMagic);
+    magicDamage(usingMagic);
+}
+
+// 魔法の名前を画面表示する
+void showMagicName(final Magic magic) {
+    final String name = magic.name();
+    // nameを使った表示処理
+}
+
+// 魔法力を消費する
+void consumeMagicPoint(final Magic magic) {
+    final int costMagicPoint = magic.costMagicPoint();
+    // costMagicPointを使った魔法力消費処理
+}
+
+// テクニカルポイントを消費する
+void consumetechnicalPoint(final Magic magic) {
+    final int costTechnicalPoint = magic.costTechnicalPoint();
+    // costTechnicalPointを使ったテクニカルポイント消費処理
+}
+
+// ダメージ計算する
+void magicDamage(final Magic magic) {
+    final int attackPower = magic.attackPower();
+    // attackPowerを使ったダメージ計算
+}
+```
+
+switch文を一切使わらずに魔法ごとの処理切り替えが実現できている。  
+magics.get(magicType)で、すべて一斉に切り替えているのが特徴。  
+処理ごとにわざわざswitch文を書いて分岐していない。  
+
+このように、インターフェースを用いて処理を一斉に切り替える設計を**ストラテジーパターン**と呼ぶ。  
+
+#### 未実装のメソッドをコンパイラが叱ってくれる
+
+インターフェースを用いたストラテジーパターンには、switch文を低減する以外にもう一つ利点がある。  
+利点が分かりやすいように、魔法の種類ごとの処理切り替えが、始めからストラテジーパターンで設計されていたらどうなっていたかを考えてみる。  
+
+魔法「地獄の業火」が追加されたケースを考えてみる。  
+switch文の時と同じように、担当者が攻撃力のメソッドattackPowerの実装を忘れたとする。  
+
+``` java
+// リスト6.35
+// Magic Interfaceにメソッド追加
+
+interface Magic {
+    String name();
+    int costMagicPoint();
+    int attackPower(); // 新規追加
+}
+
+// リスト6.36
+// 一部クラスで実装を忘れた場合
+
+class HellFire implements Magic {
+    public String name() {
+        return "地獄の業火";
+    }
+    public int costMagicPoint() {
+        return 16;
+    }
+
+    // attackPowerの実装を忘れている
+}
+```
+
+この場合は、コンパイルエラーとなる。  
+インターフェースの仕組み上、すべてのメソッドを実装している必要があるので、未実装のメソッドがある場合はエラーとなって失敗する。  
+これによって、未実装のままリリースされることがなくなる。  
+
+#### 丁寧に値オブジェクト化する
+
+ここまでがストラテジーパターンを用いたswitch重複問題の解決方法となる。  
+最後にもうひと手間をかけてさらに品質を向上させる。  
+
+MagicInterfaceのメソッドの戻り値の型はStringとint。  
+特にint型のメソッドは3つもあるため、意図の異なる値を間違えて渡してしまう懸念がある。  
+従って、魔法力、攻撃力、テクニカルポイントを、それぞれ値オブジェクト化する。  
+それぞれMagicPoint,AttackPower,TechnicalPointクラスとして設計する。  
+
+``` java
+// リスト6.37
+// 魔法インターフェースの値オブジェクト導入版
+interface Magic {
+    String name();
+    MagicPoint costMagicPoint();
+    AttackPower attackPower();
+    TechnicalPoint costTechnicalPoint();
+}
+
+// リスト6.38
+// 魔法「ファイア」の値オブジェクト導入版
+class Fire implements Magic {
+    private final Member member;
+
+    Fire (final Member member) {
+        this.member = member;
+    }
+
+    public String name() {
+        return "ファイア";
+    }
+
+    public MagicPoint costMagicPoint() {
+        return new MagicPoint(2);
+    }
+
+    public AttackPower attackPower() {
+        final int value = 20 + (int)(member.level * 0.5);
+        return new AttackPower(value);
+    }
+
+    public TechnicalPoint costTechnicalPoint() {
+        return new TechnicalPoint(0);
+    }
+}
+
+// リスト6.39
+// 魔法「紫電」の値オブジェクト導入版
+class Shiden implements Magic {
+    private final Member member;
+
+    Shiden (final Member member) {
+        this.member = member;
+    }
+
+    public String name() {
+        return "紫電";
+    }
+
+    public MagicPoint costMagicPoint() {
+        final int value = 5 + (int)(member.level * 0.2)
+        return new MagicPoint(value);
+    }
+
+    public AttackPower attackPower() {
+        final int value = 50 + (int)(member.agility * 1.5);
+        return new AttackPower(value);
+    }
+
+    public TechnicalPoint costTechnicalPoint() {
+        return new TechnicalPoint(5);
+    }
+}
+
+// リスト6.40
+// 魔法「地獄の業火」の値オブジェクト導入版
+class HellFire implements Magic {
+    private final Member member;
+
+    HellFire (final Member member) {
+        this.member = member;
+    }
+
+    public String name() {
+        return "地獄の業火";
+    }
+
+    public MagicPoint costMagicPoint() {
+        return new MagicPoint(16);
+    }
+
+    public AttackPower attackPower() {
+        final int value = 200 + (int)(member.magicAttack * 0.5 + member.vitality * 2);
+        return new AttackPower(value);
+    }
+
+    public TechnicalPoint costTechnicalPoint() {
+        final int value =  20 + (int)(member.level * 0.4);
+        return new TechnicalPoint(value);
+    }
+}
+```
+
+``` mermaid
+---
+title: 図6.4 値オブジェクトでさらに変更に強いクラス構造へ
+---
+classDiagram
+    direction BT
+
+    class MagicPoint {
+        value : int
+
+        MagicPoint(value : int)
+    }
+    class AttackPower {
+        value : int
+
+        AttackPower(value : int)
+    }
+    class TechnicalPoint {
+        value : int
+
+        TechnicalPoint(value : int)
+    }
+
+    class Magic { 
+        <<interface>>
+        name() String
+        costMagicPoint() MagicPoint
+        attackPower() AttackPower
+        costTechnicalPoint() TechnicalPoint
+    }
+
+    class Fire {
+        - member : Member
+        Fire(member : Member)
+    }
+    class Shiden{
+        - member : Member
+        Shiden(member : Member)
+    }
+    class HellFire{
+        - member : Member
+        HellFire(member : Member)
+    }
+
+    class Member {
+        level : int
+        agility : int
+        magicAttack : int
+        vitality : int
+    }
+
+    Magic ..> MagicPoint : 依存
+    Magic ..> AttackPower : 依存
+    Magic ..> TechnicalPoint : 依存
+    Fire ..|> Magic : 実装
+    Shiden ..|> Magic : 実装
+    HellFire ..|> Magic : 実装
+    Member <-- Fire : 関連
+    Member <-- Shiden : 関連
+    Member <-- HellFire : 関連
+```
+
+---
+---
+
+## 6.3 条件分岐の重複とネスト
+
+インターフェースはswitch文の重複解消以外にも、多重にネストし、複雑化した分岐の解消にも役立つ。  
+
+リスト6.41はECサイトにおいて、優良顧客かどうかを判定するロジック。  
+顧客の購入履歴を調べ、次の条件を満たす場合にゴールド会員と判定する。  
+
+- これまでの購入金額が10万円以上であること
+- 1か月あたりの購入頻度が10回以上であること  
+- 返品率が0.1%以内であること  
+
+``` java
+// リスト6.41
+// ゴールド会員がどうかを判定するメソッド
+
+// @return ゴールド会員である場合 true
+// @param history 購入履歴
+boolean isGoldCustomer(PurchaseHistory history) {
+    if (100000 <= history.totalAmount) {
+        if (10 <= history.purchaseFrequencyPerMonth) {
+            if (history.returnRate <= 0.001) {
+                return true;
+            }
+        }
+    }
+    return false;
+}
+```
+
+if文がネストしているだけなので、この場合はアーリーリターンで解決できる。  
+
+次の6.42では、次の条件をすべて満たす場合にシルバー会員と判定する。  
+
+- 1か月あたりの購入頻度が10回以上であること  
+- 返品率が0.1%以内であること  
+
+``` java
+// リスト6.42
+// シルバー会員かどうかを判定するメソッド
+
+// @return シルバー会員である場合 true
+// @param historu 購入履歴
+boolean isSilverCustomer(PurchaseHistory history) {
+    if (10 <= history.purchaseFrequencyPerMonth) {
+        if (history.returnRate <= 0.001) {
+            return true;
+        }
+    }
+    return false;
+}
+```
+
+判定条件が一部ゴールド会員と同じになっている。  
+もし、ゴールドやシルバー以外にブロンズなどの会員ランクが追加され、同様の判定条件があるとすると、全く同じ判定ロジックがあちこちに書かれてしまうことになる。  
+判定ロジックを何とか再利用できないものだろうか。  
+
+---
+
+### 6.3.1 ポリシーパターンで条件を集約する
+
+このようなケースに役立つのがポリシーパターン(Policyパターン)となる。  
+条件の部品化、部品化した条件を組み替えてのカスタマイズを可能にする。  
+
+``` java
+// リスト6.43
+// 優良顧客のルールを表現するインターフェース
+interface ExcellentCustomerRule {
+    // @return 条件を満たす場合 true
+    // @param history 購入履歴
+    boolean ok(final PurchaseHistory history);
+}
+
+// リスト6.44
+// ゴールド会員の購入金額ルール
+class GoldCustomerPurchaseAmountRule implements ExcellentCustomerRule {
+    public boolean ok(final PurchaseHistory history) {
+        return 100000 <= history.totalAmount;
+    }
+}
+
+// リスト6.45
+// 購入頻度のルール
+class PurchaseFrequencyRule implements ExcellentCustomerRule {
+    public boolean ok(final PurchaseHistory history) {
+        return 10 <= history.purchaseFrequencyPerMonth;
+    }
+}
+
+// リスト6.46
+// 返品率のルール
+class ReturnRateRule implements ExcellentCustomerRule {
+    public boolean ok(final PurchaseHistory history) {
+        return history.returnRate <= 0.001
+    }
+}
+```
+
+次にポリシークラスを用意する。  
+addメソッドでルールを集約する。  
+complyWithAllメソッド内でルールをすべて満たすか判定する。  
+
+``` java
+// リスト6.47
+// 優良顧客の方針を表現するクラス
+
+class ExcellentCustomerPolicy {
+    private final Set<ExcellentCustomerRule> rules;
+
+    ExcellentCustomerPolicy() {
+        rules = new HashSet();
+    }
+
+    // ルールを追加する
+    // @param rule ルール
+    void add(final ExcellentCustomerRule rule) {
+        rules.add(rule)
+    }
+
+    // @param history 購入履歴
+    // @return ルールをすべて満たす場合true
+    public complyWithAll(final PuyrchaseHistory history) {
+        for (ExcellentCustomerRule each : rules) {
+            if (!each.ok(history)) reutrn false;
+        }
+        return true;
+    }
+}
+```
+
+RuleとPolicyを用いてゴールド会員の判定ロジックを改善する。  
+goldCustomerPolicyにゴールド会員の3条件を追加し、complyWithAllでゴールド会員がどうかを判定する。  
+
+``` java
+// リスト6.48
+// PolicyにRuleを追加して判定条件を構築
+
+ExcellentCustomerPolicy goldCustomerPolicy = new ExcellentCustomerPolicy();
+goldCustomerPolicy.add(new GoldCustomerPurchaseAmountRule());
+goldCustomerPolicy.add(new PurchaseFrequencyRule());
+goldCustomerPolicy.add(new ReturnRateRule());
+
+goldCosumerPolicy.complyWithAll(purchaseHistory);
+```
+
+ifはExcellentCustomerPolicy.complyWithAllメソッド内のただ1つだけになり、ロジックが劇的に単純化した。  
+しかし、この書き方は、どこかのクラスにべた書きしてしまうと、ゴールド会員以外の無関係なロジックを差し込まれる可能性があり、不安定な構造となる。  
+そこで、ゴールド会員の方針として、リスト6.49の形にしっかりとクラス化を行う。  
+
+``` java
+// リスト6.49
+// ゴールド会員の方針
+
+class GoldCustomerPolicy {
+    private final ExcellentCustomerPolicy policy;
+
+    GoldCustomerPolicy() {
+        policy = new ExcellentCustomerPolicy();
+        policy.add(new GoldCustomerPurchaseAmountRule());
+        policy.add(new PurchaseFrequencyRule());
+        policy.add(new ReturnRateRule());
+    }
+
+    // @param historu 購入履歴
+    // @return ルールをすべて満たす場合 true
+    boolean complyWithAll(final PurchaseHistory history) {
+        return policy.complyWithAll(history);
+    }
+}
+```
+
+ゴールド会員の条件が集約されたクラス構造となった。  
+今後、ゴールド会員の条件に変更があれば、このGoldCustomerPolicyだけ変更すればよくなる。  
+シルバー会員についても同様の作りにする。  
+ルールが再利用されており、見通しの良いクラス構造となった。  
+
+``` java
+// リスト6.50
+// シルバー会員の方針
+
+class SilverCustomerPolicy {
+    private final ExcellentCustomerPolicy policy;
+
+    SilverCustomerPolicy() {
+        policy = new ExcellentCustomerPolicy();
+        policy.add(new GoldCustomerPurchaseAmountRule());
+        policy.add(new PurchaseFrequencyRule());
+    }
+
+    // @param historu 購入履歴
+    // @return ルールをすべて満たす場合 true
+    boolean complyWithAll(final PurchaseHistory history) {
+        return policy.complyWithAll(history);
+    }
+}
+```
+
+``` mermaid
+---
+title: 図6.7 ポリシーパターンでルールを構造化
+---
+classDiagram
+    direction BT
+
+    class GoldCustomerPollycy {
+        complyWithAll(history : PurchaseHistory) boolean
+    }
+    class SilverCustomerPollycy {
+        complyWithAll(history : PurchaseHistory) boolean
+    }
+
+    class ExcellentCustomerPolicy {
+        add(rule : ExcellentCustomerRule void
+        complyWithAll(history : PurchaseHistory) boolean
+    }
+
+    class ExcellentCustomerRule { 
+        <<interface>>
+        ok(history: PurchaseHistory) boolean
+    }
+
+    class GoldCustomerPurchaseAmountRule {
+    }
+    class PurchaseFrequencyrule{
+    }
+    class ReturnRateRule{
+    }
+
+    GoldCustomerPollycy --> ExcellentCustomerPolicy : 関連
+    SilverCustomerPollycy --> ExcellentCustomerPolicy : 関連
+
+    ExcellentCustomerPolicy  --> "0..*" ExcellentCustomerRule : 関連
+
+    GoldCustomerPurchaseAmountRule ..|> ExcellentCustomerRule : 実装
+    PurchaseFrequencyrule ..|> ExcellentCustomerRule : 実装
+    ReturnRateRule ..|> ExcellentCustomerRule : 実装
+
+    ExcellentCustomerPolicy ..> PurchaseHistory : 関連
+    ExcellentCustomerRule ..> PurchaseHistory : 関連
+```
+
+---
+---
+
+## 6.4 型チェックで分岐しないこと
+
+せっかくinterfaceを使っても条件分岐が減らない、よくないやり方がある。  
+
+ホテルの宿泊料金を例に説明する。  
+宿泊料金には、通常の宿泊部屋用の料金(7,000円)と高級部屋用のプレミアム宿泊料金(12,000円)の2つがあるとする。  
+これらの料金をストラテジーパターンで切り替えられるよう、リスト6.51のinterfaceを用意する。  
+
+feeメソッドで宿泊料金を取得する。  
+戻り値は金額を表現する値オブジェクトのMoneyクラス。  
+
+通常宿泊料金とプレミアム宿泊料金は、リスト6.52、リスト6.53に示すようにHotelRatesInterfaceの実装により表現する。  
+
+``` java
+// リスト6.51
+// 宿泊料金を表すinterface
+interface HotelRates {
+    Money fee(); // 金額
+}
+
+// リスト6.52
+// 通常宿泊料金
+class RegularRates implements HotelRates {
+    public Money fee() {
+        return new Money(7000);
+    }
+}
+
+// リスト6.53
+// プレミアム宿泊料金
+class PremiumRates implements HotelRates {
+    public Money fee() {
+        return new Money(12000;)
+    }
+}
+```
+
+これにより、ストラテジーパターンで宿泊料金の切り替えが可能になった。  
+
+ここでレベニューの概念を取り入れる。  
+繫忙期など宿泊需要が高い時期は、宿泊料金が高く設定されているケースが多い。  
+通常宿泊とプレミアム宿泊とで、繫忙期の金額をそれぞれ上乗せするロジックを急遽実装したところ、リスト6.54のロジックになった。  
+
+``` java
+// リスト6.54
+// 型判定による繫忙期料金の切り替え
+
+HotelRates hotelRates = 引数から実装インスタンスの代入;
+Money busySeasonFee;
+if (hotelRates instanceof RegularRates) {
+    busySeasonFee = hotelRates.fee().add(new Money(3000));
+}else if (hotelRates instanceof PremiumRates) {
+    busySeasonFee = hotelRates.fee().add(new Money(5000));
+}
+```
+
+hotelRatesがRegularRatesなら3,000円、PremiumRatesなら5,000円上乗せする分岐ロジックとなっている。  
+
+interface実装クラスの型を調べて分岐しており、せっかくinterfaceを使っているのに、条件分岐削減の役にやっていない。  
+繫忙期の料金を使いたいロジックが他にもある場合、instanceofを使った同じ条件分岐をまた書かなければならなくなる。  
+
+このようなロジックは、**リスコフの置換原則**と呼ばれるソフトウェア原則に違反している。  
+この原則はクラスの基本型と継承型との間に成り立つ規律を示したもの。  
+簡単に言うと、「基本型を継承型に置き換えても問題なく動作しなければならない」とするもの。  
+
+ここでいう基本型はinterfaceであり、継承型はinterface実装クラスとなる。  
+instanceofで分岐して、各分岐先で3,000円、5,000円を上乗せするロジックにおいて、hotelRatesは他の継承型へ置換できない(置換できないためにinstanceofで型判定している)。  
+
+このように、リスコフの置換原則に違反すると、型判定の分岐コードが増大し、メンテナンスが難しいコードになってしまう。  
+**interfaceの意義を十分に理解していない場合に、この手のロジックに陥ってしまう。**  
+
+繁忙期料金もinterfaceで切り替える。  
+HotelRatesInterfaceに繁忙期料金を返すメソッドbusySeasonFeeを追加する。  
+
+``` java
+// リスト6.55
+// 繫忙期料金を切り替えられるようinterfaceに定義
+interface HotelRates {
+    Money fee();
+    Money busySeasonFee(); // 繫忙期料金
+}
+
+// リスト6.56
+// 通常宿泊料金に繁忙期料金を追加
+class Regularrates implements HotelRates {
+    public Money fee() {
+        return new Money(7000);
+    }
+    public Money busySeasonFee() {
+        return fee().add(new Money(3000));
+    }
+}
+
+// リスト6.57
+// プレミアム宿泊料金に繫忙期料金を追加
+class PremiumRates implements HotelRates {
+    public Money fee() {
+        return new Money(12000;)
+    }
+    public Money busySeasonFee() {
+        return fee().add(new Money(5000));
+    }
+}
+
+// リスト6.58
+// 繫忙期料金の型判定ロジックが不要になった
+Money busySeasonFee = hotelRates.busySeasonFee();
+```
+
+``` mermaid
+classDiagram
+  direction BT
+    class Money {
+        amount : int
+
+        Money(amount : int)
+        add(other : Money) Money
+    }
+
+    class HotelRates { 
+        <<interface>>
+        fee() Money
+        busySeasonFee() Money
+    }
+    
+    class RegularRates{
+    }
+
+    class PremiumRates{
+    }
+
+    HotelRates ..>Money : 依存
+    RegularRates ..|> HotelRates : 実装
+    PremiumRates ..|> HotelRates : 実装
+```
+
+これにより、呼び出し先でinstanceofによる型判定が不要となった。  
+
+---
+---
+
+## 6.5 interfaceの使いこなしが中級者への第一歩
+
+interfaceをうまく駆使すると条件分岐が大幅に減り、コードがシンプルになる。  
+**ingerfaceを使いこなせるかが、設計スキルの分水嶺といっても過言ではない。**
+
+設計スキルごとの考え方の違い  
+||初級者|中級以上|
+|:-|:-|:-|
+|分岐|迷わずif文やswitch文を使う|interface設計を試みる|
+|分岐ごとの処理|ロジックをべた書きする|クラス化を試みる|
+
+「**分岐を書きそうになったら、まずinterface設計**」  
+これを意識するだけで、かなり分岐処理への向き合い方が変わってくるはず。  
+
+---
+---
+
+## 6.6 フラグ引数
+
+フラグ引数の典型例
+
+``` java
+// リスト6.59
+// damageメソッド
+
+damage(true,damageAmount);
+
+// リスト6.60
+// damageメソッドの内部
+
+void damage(boolean damageFlag, int damageAmount) { 
+    if (damageFlag == true) {
+        // ヒットポイントダメージ
+        member.hitPoint -= damageAmount;
+        if (0 < member.hitPoint) return;
+
+        member.hitPoint = 0;
+        member.addState(StateType.dead);
+    }
+    else {
+        // 魔法力ダメージ
+        member.magicPoint -= damageAmount;
+        if (0 < member.magicPoint) return;
+
+        member.magicPoint = 0;
+    }
+}
+```
+
+第一引数damageFlagで、ヒットポイントダメージか魔法力ダメージであるかを切り替えている。  
+このように、メソッドの機能を切り替えるboolean型引数を**フラグ引数**と呼ぶ。  
+
+フラグ引数付きのメソッドは、何が起こるか読み手に想像を難しくさせる。  
+何が起こるのか理解するには、メソッド内部のロジックを見にいかなければならない。  
+可読性が低下し、開発生産性が低下する。  
+
+boolean型引数に限らず、int型引数で機能を切り替えるのも同様の弊害が生じる。  
+てか、この時点でマジックナンバーという弊害も発生する。  
+
+``` java
+// リスト6.61
+// int型引数で機能を切り替える
+
+void execute(int processNumber) {
+    if (processNumber == 0) {
+        // アカウント登録処理
+    } else if (processNumber = 1) {
+        // 配送完了メール送信処理
+    } else if (processNumber = 2) {
+        // 注文処理
+    } else if (processNumber = 3) { 
+        // …
+    }
+}
+```
+
+---
+
+### 6.6.1 メソッドを分離する
+
+フラグ引数付きメソッドは、内部に複数の機能を持ち、フラグで切り替えている構造。  
+メソッドは単機能になるよう設計すべし。  
+フラグ引数付メソッドは機能ごとに分離すべし。  
+
+機能ごとに分けて、それぞれのメソッドにふさわしい命名をすることで、可読性がぐっと上がる。  
+
+``` java
+// リスト 6.62
+// ヒットポイントダメージと魔法力ダメージとでメソッドを分離
+
+void hitPointDamage(final int damageAmount) {
+    member.hitPoint -= damageAmount;
+    if (0 < member.hitPoint) return;
+    member.hitPoint = 0;
+    member.addState(StateType.dead);
+}
+
+void magicPointDamage(final int damageAmount) {
+    member.magicPoint -= damageAmount;
+    if (0 < member.magicPoint) return;
+
+    member.magicPoint = 0;
+}
+```
+
+---
+
+### 6.6.2 切り替え機構をストラテジーパターンで実現する
+
+機能別にメソッドを分離できたが、何らかの仕様により、ヒットポイントダメージか魔法力ダメージかを切り替えたいケースがあるかもしれない。  
+これに対応するためにbooleanで判定してしまえば楽だが、このような場合はストラテジーパターンを用いるとよろしい。  
+
+フラグ引数で機能を切り替えていたのは、ヒットポイントダメージ、魔法力ダメージそれぞれの振る舞いなので、それに対するinterfaceを定義する。  
+
+``` java
+// リスト6.63
+// ダメージを表すinterface
+
+interface Damege {
+    void execute(final int damageAmount);
+}
+```
+
+各ダメージを表すクラスHitPointDamage,MagicPointDamageを用意して、DamageInterfaceを実装する。  
+
+``` java
+// リスト6.64
+// DamageInterfaceの実装
+
+// ヒットポイントダメージ
+class HitPointDamage implements Damage {
+    // 中略
+    public void execute(final int damageAmount) {
+        member.hitPoint -= damageAmount;
+        if (0 < member.hitPoint) return;
+        member.hitPoint = 0;
+        member.addState(StateType.dead);
+    }
+}
+
+// 魔法力ダメージ
+class MagicPointDamage implements Damage {
+    // 中略
+    public void magicPointDamage(final int damageAmount) {
+        member.magicPoint -= damageAmount;
+        if (0 < member.magicPoint) return;
+
+        member.magicPoint = 0;
+    }
+}
+```
+
+``` mermaid
+classDiagram
+    class Damage { 
+        <<interface>>
+        execute(damageAmount : int) void
+    }
+    
+    class HitPointDamage{
+    }
+    class MagicPointDamage{
+    }
+
+    class Member {
+        int hitPoint
+        int magicPoint
+        addState(state : StateType) void
+    }
+
+    HitPointDamage ..|>Damage : 実装
+    MagicPointDamage ..|>Damage : 実装
+    Member <.. HitPointDamage : 関連
+    Member <.. MagicPointDamage : 関連
+```
+
+enumとMapで切り替える
+
+``` java
+// リスト6.65
+// Mapで処理切り替え
+
+enum DamageType {
+    hitPoint,
+    magicPoint
+}
+
+private final Map<DamageType,Damage> damages;
+
+void applyDamage(final DamageType damageType, final int damageAmount) {
+    final Damage damage = damages.get(damageType);
+    damage.execute(damageAmount);
+}
+
+
+// リスト 6.66
+// applyDamageメソッドの呼び出し
+
+applyDamage(DamageType.magicPoint,damageAmount);
+```
+
+リスト6.59(if文でべた書き)と比べて、何が起こるかわかりやすくなった。  
+条件分岐を書かずに済んでおり、かなり見通しがよくなった。  
+また、このようにストラテジーパターンで設計しておけば、新しいダメージ仕様の追加にも容易に対応できる。  
+例えば、テクニカルポイントダメージの仕様を追加したい場合は、DamageInterfaceを実装したTechnicakPointDamageクラスを定義するのがよいだろう。  
